--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         }
     }
     compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "com.protech.demonative"
         minSdkVersion 19
@@ -48,6 +48,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    debugCompile project(':smartcalc')
-    releaseCompile 'com.protech.mix:smartCalc:1.0b'
+    compile project(':smartcalc')
+//    compile 'com.protech.mix:smartCalc:1.1'
+//    debugCompile project(':smartcalc')
+//    releaseCompile 'com.protech.mix:smartCalc:1.0b'
 }
