--- a/smartcalc/CMakeLists.txt
+++ b/smartcalc/CMakeLists.txt
@@ -5,6 +5,21 @@
 
 cmake_minimum_required(VERSION 3.4.1)
 
+# Sets lib_src_DIR to the path of the target CMake project.
+set( lib_src_DIR ../extsmath )
+
+# Sets lib_build_DIR to the path of the desired output directory.
+set( lib_build_DIR ../extsmath/outputs )
+file(MAKE_DIRECTORY ${lib_build_DIR})
+
+# Adds the CMakeLists.txt file located in the specified directory
+# as a build dependency.
+add_subdirectory( # Specifies the directory of the CMakeLists.txt file.
+                  ${lib_src_DIR}
+
+                  # Specifies the directory for the build outputs.
+                  ${lib_build_DIR} )
+
 # Creates and names a library, sets it as either STATIC
 # or SHARED, and provides the relative paths to its source code.
 # You can define multiple libraries, and CMake builds them for you.
@@ -17,10 +32,12 @@ add_library( # Sets the name of the library.
              SHARED
 
              # Provides a relative path to your source file(s).
-             src/main/cpp/com_protech_mix_SmartCalc.c)
+             src/main/cpp/SmartCalc.cpp)
 
 include_directories(src/main/cpp)
+include_directories( ${lib_src_DIR}/include )
 
-set(CMAKE_CXX_FLAGS
-   "${CMAKE_CXX_FLAGS} -std=c++0x -O2 -D_FORTIFY_SOURCE=2 -fstack-protector-all -fPIE")
-set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pie")
+# Specifies the target library.
+target_link_libraries(
+                        smartcalc
+                        extsmath)
