Fixed smart calc to use fib while updating a Java Object

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile project(':smartcalc')
-//    compile 'com.protech.mix:smartCalc:1.1'
-//    debugCompile project(':smartcalc')
-//    releaseCompile 'com.protech.mix:smartCalc:1.0b'
+    debugCompile project(':smartcalc')
+    releaseCompile 'com.protech.mix:smartCalc:1.1'
 }
