Demo with enums

--- a/extsmath/CMakeLists.txt
+++ b/extsmath/CMakeLists.txt
@@ -31,3 +31,8 @@ add_library( # Sets the name of the library.
 target_link_libraries(
                         extsmath
                         ${log-lib})
+
+
+set(CMAKE_CXX_FLAGS
+   "${CMAKE_CXX_FLAGS} -std=c++0x -O2 -D_FORTIFY_SOURCE=2 -fstack-protector-all -fPIE")
+set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pie")
