--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -59,3 +59,8 @@ target_link_libraries(
                         app-native
                         extmath
                         ${log-lib} )
+
+
+set(CMAKE_CXX_FLAGS
+   "${CMAKE_CXX_FLAGS} -std=c++0x -O2 -D_FORTIFY_SOURCE=2 -fstack-protector-all -fPIE")
+set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pie")
