--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,26 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            jniDebuggable true
+
+            externalNativeBuild {
+                cmake { cppFlags "-DDEBUG -DANDROID_STL=gnustl_shared" }
+                ndkBuild {
+                    arguments "APP_DEPRECATED_HEADERS=true"
+                }
+            }
+        }
     }
     externalNativeBuild {
         cmake {
             path "CMakeLists.txt"
         }
+    }
+    packagingOptions {
+        doNotStrip "*/armeabi/*.so"
+        doNotStrip "*/armeabi-v7a/*.so"
+        doNotStrip "*/x86/*.so"
     }
 }
 
