--- a/extmath/CMakeLists.txt
+++ b/extmath/CMakeLists.txt
@@ -19,3 +19,8 @@ add_library( # Sets the name of the library.
              # Provides a relative path to your source file(s).
              src/DumbCalc.cpp
              src/ExtMath.cpp)
+
+
+set(CMAKE_CXX_FLAGS
+   "${CMAKE_CXX_FLAGS} -std=c++0x -O2 -D_FORTIFY_SOURCE=2 -fstack-protector-all -fPIE")
+set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pie")
