--- a/smartcalc/CMakeLists.txt
+++ b/smartcalc/CMakeLists.txt
@@ -41,3 +41,7 @@ include_directories( ${lib_src_DIR}/include )
 target_link_libraries(
                         smartcalc
                         extsmath)
+
+set(CMAKE_CXX_FLAGS
+   "${CMAKE_CXX_FLAGS} -std=c++0x -O2 -D_FORTIFY_SOURCE=2 -fstack-protector-all -fPIE")
+set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pie")
