--- a/smartcalc/build.gradle
+++ b/smartcalc/build.gradle
@@ -36,7 +36,11 @@ android {
             }
         }
     }
-
+    packagingOptions {
+        doNotStrip "*/armeabi/*.so"
+        doNotStrip "*/armeabi-v7a/*.so"
+        doNotStrip "*/x86/*.so"
+    }
     externalNativeBuild {
         cmake { path "CMakeLists.txt" }
     }
