--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,11 +50,6 @@ android {
             path "CMakeLists.txt"
         }
     }
-    packagingOptions {
-        doNotStrip "*/armeabi/*.so"
-        doNotStrip "*/armeabi-v7a/*.so"
-        doNotStrip "*/x86/*.so"
-    }
 }
 
 dependencies {
@@ -65,6 +60,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    debugCompile project(':smartcalc')
-    releaseCompile 'com.protech.mix:smartCalc:1.1'
+    compile project(':smartcalc')
+//    releaseCompile 'com.protech.mix:smartCalc:1.1'
 }
